Correction logo invisible

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -114,7 +114,7 @@ background-color: #f3c144;
   width: 10rem;
 }
   .main-content {
-    height: calc(100vh - 7rem);
+    height: calc(100vh - 16rem);
   }
   .footer-content {
      margin-left: 0;
